--- a/local/css/frame.css
+++ b/local/css/frame.css
@@ -28,7 +28,13 @@
   margin: 1em 2%;
 }
 .frame-menu-icon {
+  height: 2.5em;
+  margin: auto 0;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
+.frame-menu-icon:hover, .frame-menu-icon:active{
+  height: 2.7em;
 }
 .frame-nav > div {
   display: inherit;
@@ -127,15 +133,18 @@
 }
 .user-dropdown-toggle-btn {
   height: auto;
-  padding: 0.25em;
-  background-color: #1986D9;
-  width: 12em;
+  box-sizing: content-box;
+  padding: 0.5em 1em;
+  background-color: rgba(255, 255, 255, 0.05);
+  border-radius: 0;
+  border: 0.1em solid #e3e3e3;
+  border-left: 0.4em solid #5FCA8F;
   background-image: url(../img/button/chevron-down.png);
-  background-position: 90% 50%;
+  background-position: 95% 50%;
   background-repeat: no-repeat;
 }
 .user-dropdown {
-  width: 12em;
+  width: 100%;
   background-color: #1986D9;
 }
 .user-dropdown > li {
@@ -183,16 +192,16 @@
 }
 .user-avatar {
   border: 0.1em solid rgba(255, 255, 255, 0.5);
-  ;
   height: 3em;
   width: 3em;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   border-radius: 50%;
-  margin: auto 1em auto 0;
+  margin: auto 0.5em;
 }
 .user-details {
+  margin: auto 2em auto 1em;
   text-align: left;
 }
 .frame-logout-btn {
@@ -209,20 +218,23 @@
   margin: auto;
 }
 .frame-content-wrap {
+  position: relative;
   background-color: #0F2A41;
   margin: 0 2%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: calc(100% - 3em - 4%);
-  position: relative;
+  height: calc(100% - 3em - 5%);
   overflow: hidden;
 }
 .frame-sidebar {
-  position: relative;
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.75);
   width: 25em;
   height: 100%;
+  left: -25em;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -234,6 +246,11 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-transition: all 0.45s ease;
+  transition: all 0.45s ease;
+}
+.frame-sidebar.active {
+  left: 0;
 }
 .active-server-btn {
   display: -webkit-box;
@@ -308,7 +325,7 @@
   width: 100%;
   height: 4em;
   line-height: 4;
-  background-color: #122C42;
+  background-color: rgba(0, 0, 0, 0.7);
   background-position: 5% 50%;
   background-repeat: no-repeat;
   margin: 0.1em 0;
@@ -322,6 +339,18 @@
   background-color: inherit;
   color: #fff;
 }
+.nhome-btn{
+  text-indent: 5em;
+  background-image: url(../img/filter-icon/nhome.png);
+  background-size: 3em;
+}
+.nhome-btn.active, .nhome-btn:hover{
+  background-color: #e6e6e6;
+  background-size: 10em;
+  text-indent: 13em;
+  -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+  transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+}
 .devices-btn {
   text-indent: 5em;
   background-image: url(../img/filter-icon/devices.png);
@@ -330,7 +359,7 @@
 .devices-btn.active, .devices-btn:hover {
   background-color: #1BA1DF;
   background-size: 10em;
-  text-indent: 15em;
+  text-indent: 13em;
   -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
   transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
 }
@@ -342,7 +371,7 @@
 .scenes-btn.active, .scenes-btn:hover {
   background-color: #EC3535;
   background-size: 10em;
-  text-indent: 15em;
+  text-indent: 13em;
   -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
   transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
 }
@@ -354,7 +383,7 @@
 .schedule-btn.active, .schedule-btn:hover {
   background-color: #12C9C6;
   background-size: 10em;
-  text-indent: 15em;
+  text-indent: 13em;
   -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
   transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
 }
@@ -366,7 +395,7 @@
 .security-btn.active, .security-btn:hover {
   background-color: #E9A737;
   background-size: 10em;
-  text-indent: 15em;
+  text-indent: 13em;
   -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
   transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
 }
@@ -383,7 +412,7 @@
 .sidebar-activity-log {
   /*background-color: #122C42;*/
   width: 100%;
-  max-height: 40em;
+  max-height: 25em;
   color: #949EAC;
   overflow: auto;
   padding: 0.5em 0;
@@ -534,9 +563,17 @@
 .frame-page-content-wrap {
   position: relative;
   width: 100%;
+  -webkit-transition: all 0.45s ease;
+  transition: all 0.45s ease;
 }
-.all-rooms-nav{
+.all-rooms-nav {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .all-rooms-view-point {
@@ -586,6 +623,38 @@
     width: 18.5em;
   }
 }
+.category-name {
+  cursor: pointer;
+}
+.category-name-form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  margin: auto 0;
+  -webkit-animation: popUp 0.5s ease;
+  animation: popUp 0.5s ease;
+}
+.category-name-submit {
+  background: transparent url(../img/button/checked.png) center no-repeat;
+}
+.category-name-reset {
+  background: transparent url(../img/button/cross.png) center no-repeat;
+}
+.category-name-delete {
+  background: rgba(236, 53, 53, 0.65) url(../img/button/trash.png) center no-repeat;
+}
+.button.add-new {
+  background-image: url(../img/button/add-room.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/*
 .add-category-wrap form {
   display: -webkit-box;
   display: -webkit-flex;
@@ -622,39 +691,42 @@
   height: 2.5em;
   width: 2.5em;
   border: 0;
-}
-.favorites-sensors-wrap{
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-flow: row wrap;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+}*/
+
+.favorites-sensors-wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
 }
 .sensor-wrap {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row wrap;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin-top: 1.5em;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  margin: 0 0.5em;
+  max-width: 75%;
+  overflow: auto;
 }
 .info-sensor {
   position: relative;
   display: inherit;
   max-width: 10em;
-  margin: 0 1em;
+  margin: auto 1em;
   color: #fff;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -771,6 +843,24 @@
 .recently-used-filter-btn.active, .recently-used-filter-btn:hover {
   background-image: url(../img/button/recently-white.png);
 }
-.settings-btn {
+.settings-cog-btn {
   background-image: url(../img/button/cog.png);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+@media screen and (min-width: 992px) {
+  .frame-sidebar {
+    position: relative;
+    left: 0;
+    background-color: inherit;
+  }
+  .frame-sidebar.active {
+    left: -25em;
+    position: absolute;
+  }
+  .sidebar-nav-btn {
+    background-color: #122C42;
+  }
 }
