--- a/local/css/style.css
+++ b/local/css/style.css
@@ -63,7 +63,6 @@ button:focus {
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
   height: 2.5em;
-  margin: auto 0.25em;
   outline: 0;
   border: 0.1em solid transparent;
   text-align: center;
@@ -239,14 +238,15 @@ input:disabled ~ label, input:disabled {
   position: relative;
   width: 100%;
   height: 4em;
+  margin-bottom: 1.5em;
   color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: row nowrap;
-  -ms-flex-flow: row nowrap;
-  flex-flow: row nowrap;
+  -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
@@ -255,6 +255,9 @@ input:disabled ~ label, input:disabled {
 .display-devices {
   color: #7BA0BF;
   padding: 1em 2em;
+}
+.display-devices > h4{
+  cursor: pointer;
 }
 .display-devices-row {
   width: 100%;
@@ -273,10 +276,19 @@ input:disabled ~ label, input:disabled {
 }
 .google-map {
   width: 100%;
-  min-height: 12em;
+  min-height: 21em;
+}
+.google-map-input{
+  color: #000;
 }
 .hidden-input {
   display: none;
+}
+.margin-auto{
+  margin: auto;
+}
+.color-red{
+  color: #EC3535;
 }
 .color-green {
   color: #00E676;
@@ -308,6 +320,9 @@ input:disabled ~ label, input:disabled {
   display: -ms-flexbox;
   display: flex;
 }
+.row-wrap{
+  flex-flow: row wrap;
+}
 .justify-end {
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
@@ -324,7 +339,7 @@ input:disabled ~ label, input:disabled {
   position: absolute;
   left: 0;
   right: 0;
-  top: 5em;
+  bottom: 0;
   border-bottom: 0.1em solid rgba(255, 255, 255, 0.25);
 }
 .pop-up {
